ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.4.27, 5.0.24
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Optimization
    • Fully Compatible
    • ALL
    • v5.0, v4.4
    • QO 2023-10-16, QO 2023-10-30, QO 2023-11-13, QO 2023-11-27
    • 8
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      stack trace

      mongo::invariantFailed(char const*, char const*, unsigned int)
      mongo::BoostAssertImpl::BoostAssertImpl()::{lambda(char const*, char const*, char const*, long)#1}::operator()(char const*, char const*, char const*, long) const
      std::_Function_handler<void (char const*, char const*, char const*, long), mongo::BoostAssertImpl::BoostAssertImpl()::{lambda(char const*, char const*, char const*, long)#1}>::_M_invoke(std::_Any_data const&, char const*&&, std::_Any_data const&, std::_Any_data const&, long&&)
      std::function<void (char const*, char const*, char const*, long)>::operator()(char const*, char const*, char const*, long) const
      boost::assertion_failed(char const*, char const*, char const*, long)
      boost::intrusive_ptr<mongo::Expression>::operator->() const
      mongo::ExpressionNary::optimize()
      mongo::ExpressionAnd::optimize()
      mongo::projection_executor::ProjectionNode::optimize()
      mongo::projection_executor::ProjectionNode::optimize()
      mongo::projection_executor::ProjectionNode::optimize()
      mongo::projection_executor::ProjectionNode::optimize()
      mongo::projection_executor::InclusionProjectionExecutor::optimize()
      

            Assignee:
            Alya Berciu
            Reporter:
            Alexander Ignatyev
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: