SERVER-81573 Optimize a projection expression prior to planning for 'find'