src/mongo/db/query/projection_ast.h
@@ -312,6 +312,10 @@ public:
         return _expr;
     }
 
+    void optimize() {
+        _expr = _expr->optimize();
+    }
+
 private:
     boost::intrusive_ptr<Expression> _expr;
 };
