src/mongo/db/query/projection_parser.h
@@ -45,14 +45,16 @@ Projection parse(boost::intrusive_ptr<ExpressionContext> expCtx,
                  const BSONObj& obj,
                  const MatchExpression* query,
                  const BSONObj& queryObj,
-                 ProjectionPolicies policies);
+                 ProjectionPolicies policies,
+                 bool shouldOptimize = false);
 
 /**
  * Overload of parse() to be used when not parsing a projection from a find() command.
  */
 Projection parse(boost::intrusive_ptr<ExpressionContext> expCtx,
                  const BSONObj& obj,
-                 ProjectionPolicies policies);
+                 ProjectionPolicies policies,
+                 bool shouldOptimize = false);
 
 /**
  * Adds a node to the projection AST rooted at 'root' to the path specified by 'path'.
