jstests/core/optimize_uninitialized.js
@@ -1,0 +1,9 @@
+/**
+ * Tests that the optimizer deals correctly with uninitialized arguments to an expression.
+ */
+(function() {
+const coll = db[jsTestName()];
+coll.drop();
+assert.commandWorked(coll.createIndexes([{"num": 1}, {"num": -1}]));
+assert.eq(coll.find({"num": 10}, {"geo": {$and: ["$n", {$multiply: []}]}}).toArray().length, 0);
+})();
